--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@types/react-dom": "^17.0.0",
     "axios": "0.22.0",
     "history": "^5.0.1",
+    "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "react-spinners": "^0.11.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
