--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0-beta2",
     "@fortawesome/free-solid-svg-icons": "^6.0.0-beta2",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.3",
+    "@mui/styles": "^5.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -18,14 +20,15 @@
     "@types/react-dom": "^17.0.0",
     "axios": "0.22.0",
     "history": "^5.0.1",
+    "luxon": "^2.0.2",
     "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-minimal-pie-chart": "^8.2.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "react-tooltip": "^4.2.21",
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,7 +55,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.1",
+    "@types/enzyme": "^3.10.9",
+    "@types/luxon": "^2.0.5",
+    "@types/react-router-dom": "5.3.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "enzyme": "3.11.0",
     "prettier": "2.0.5"
   }
 }
