--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-tooltip": "^4.2.21",
+    "string-to-color": "^2.2.2",
     "typescript": "^4.1.2"
   },
   "scripts": {
