--- a/package.json
+++ b/package.json
@@ -3,33 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.3.0-beta2",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0-beta2",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "@mui/lab": "^5.0.0-alpha.51",
-    "@mui/material": "^5.0.3",
-    "@mui/styles": "^5.0.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@emotion/react": "11.4.1",
+    "@emotion/styled": "11.3.0",
+    "@fortawesome/fontawesome-svg-core": "1.3.0-beta2",
+    "@fortawesome/free-solid-svg-icons": "6.0.0-beta2",
+    "@fortawesome/react-fontawesome": "0.1.15",
+    "@mui/lab": "5.0.0-alpha.51",
+    "@mui/material": "5.0.3",
+    "@mui/styles": "5.0.1",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.1.0",
+    "@testing-library/user-event": "12.1.10",
+    "@types/jest": "26.0.15",
+    "@types/node": "12.0.0",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
     "axios": "0.22.0",
-    "history": "^5.0.1",
-    "luxon": "^2.0.2",
-    "query-string": "^7.0.1",
+    "history": "5.0.1",
+    "luxon": "2.0.2",
+    "query-string": "7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-minimal-pie-chart": "^8.2.0",
+    "react-minimal-pie-chart": "8.2.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "react-tooltip": "^4.2.21",
-    "string-to-color": "^2.2.2",
-    "typescript": "^4.1.2"
+    "react-tooltip": "4.2.21",
+    "string-to-color": "2.2.2",
+    "typescript": "4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,10 +56,10 @@
     ]
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.9",
-    "@types/luxon": "^2.0.5",
+    "@types/enzyme": "3.10.9",
+    "@types/luxon": "2.0.5",
     "@types/react-router-dom": "5.3.1",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.6.3",
     "enzyme": "3.11.0",
     "prettier": "2.0.5"
   }
